# cookiecutter-sdl

./: README.md  cookiecutter.json
{{cookiecutter.directory_name}}/: CMakeLists.txt
{{cookiecutter.directory_name}}/src/: main.cpp
